--- a/_pages/chess.html
+++ b/_pages/chess.html
@@ -6,8 +6,11 @@ description: "Rincón de ajedrez"
 <div class="book-list">
 
 {% for i in (1..6) %}
-<a class="zoom" href="assets/images/pages/chess/games/chess_{{i}}.jpg">
-  <img src="assets/images/pages/chess/games/chess_{{i}}.jpg" width="80px"/>
-</a>
+  {% assign str1 =  'assets/images/pages/chess/games/chess_' %}
+  {% assign str2 = '.jpg' %}
+  {% assign file_path = str1 | append: i | append: str2 %}
+    <a class="zoom" href="{{file_path}}">
+        <img src="{{file_path}}" width="80px"/>
+    </a>
 {% endfor %}
 </div>
