Photo gallery style improved

--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -7,7 +7,7 @@ description: "Rincón de fotos"
 
 {% for i in (1..6) %}
 <a class="zoom" href="assets/images/pages/photos/photo_{{i}}.jpg">
-  <img src="assets/images/pages/photos/photo_{{i}}.jpg" width="80px"/>
+  <img class="gallerypic" src="assets/images/pages/photos/photo_{{i}}.jpg" width="80px"/>
 </a>
 {% endfor %}
 </div>
