--- a/_pages/chess.html
+++ b/_pages/chess.html
@@ -5,12 +5,16 @@ description: "Rincón de ajedrez"
 ---
 <div class="book-list">
 
-{% for i in (1..7) %}
+{% assign ndays = 7 %}
+
+{% assign j = ndays %}
+{% for i in (1..ndays) %}
   {% assign str1 =  'assets/images/pages/chess/games/chess_' %}
   {% assign str2 = '.jpg' %}
-  {% assign file_path = str1 | append: i | append: str2 %}
+  {% assign file_path = str1 | append: j | append: str2 %}
     <a class="zoom" href="{{file_path}}">
         <img src="{{file_path}}" width="80px"/>
     </a>
+    {% assign j = j | minus: 1 %}
 {% endfor %}
 </div>
