--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -5,7 +5,7 @@ description: "Rincón de lectura"
 ---
 <div class="book-list">
 {% for book in site.data.books %}
-{% if book.completed == 'reading' %}
+{% if book.onpage %}
     <h2 class="year">
       <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}">
         <span class="book-title">«{{ book.title }}»</span>
@@ -16,9 +16,10 @@ description: "Rincón de lectura"
     {% endif %}
     </h2>
 
-    {% if book.progress %}
+    {% if book.onpage %}
+    {% assign progress = book.onpage | divided_by:book.pages | times:100 | round: 0 | append: '%' %}
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
-      <div class="w3-container w3-round w3-blue" style="width: {{ book.progress }}">{{ book.progress }}</div>
+      <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ progress }}</div>
     </div>
     {% endif %}
     {% if book.synopsis %}
