--- a/_pages/todo.html
+++ b/_pages/todo.html
@@ -14,6 +14,7 @@ description: "Tareas"
     <h2 class="year">
         <span class="book-title">{{ item.title }} ({{ item.done}}/{{item.tasks}})</span>
     </h2>
+    {% if item.title == "Hoy" %}
     {% assign ntasks = item.tasks | times: 1.0 %}
     {% assign progress = item.done | divided_by: ntasks | times:100 | round: 0 | append: '%' %}
     {% assign tt = item.time | divided_by: 60.0 | round: 1 %}
@@ -21,11 +22,24 @@ description: "Tareas"
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
       <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ progress }}</div>
     </div>
-    {% if item.title == "Hoy" %}
+      <p>Algunas tareas para hoy y que puedo compartir son:</p>
+      <ul class="tasks">
+      {% for task in site.data.today %}
+        <li><input type="checkbox"> {{ task.title }}</li>
+      {% endfor %}
+        <li><input type="checkbox"> ···</li>
+      </ul>
       <p>Las {{ ntasks | round: 0 }} tareas de hoy tienen una duración total estimada de {{ tt }} horas.</p>
     {% endif %}
 
     {% if item.title == "Siguientes" %}
+    <p>Algunas próximas tareas que puedo compartir son:</p>
+      <ul class="tasks">
+      {% for task in site.data.next %}
+        <li><input type="checkbox"> {{ task.title }}</li>
+      {% endfor %}
+      <li><input type="checkbox"> ···</li>
+      </ul>
     <p>Las {{ ntasks | round: 0 }} tareas siguientes tienen una duración total estimada de {{ tt }} horas.</p>
     {% endif %}
 
