Todo module updated

--- a/_pages/todo.html
+++ b/_pages/todo.html
@@ -9,7 +9,7 @@ description: "Tareas"
     <h2 class="year">
       <span class="book-title">{{ item.title }} ({{ item.todo }})</span>
    </h2>
-   <p>Esta bandeja de entrada se procesa diariamente.</p>
+   <p>Esta bandeja de entrada se procesa y se vacía diariamente.</p>
     {% else %}
     <h2 class="year">
         <span class="book-title">{{ item.title }} ({{ item.done}}/{{item.tasks}})</span>
