habits > old_habits

--- a/_pages/habits.html
+++ b/_pages/habits.html
@@ -42,7 +42,7 @@ description: "Hábitos"
     <th>ARB</th>
     </tr>
   </thead>
-{% for habits in site.data.habits %}
+{% for habits in site.data.old_habits %}
 <tr>
     <td>
       <div class="tooltip">{{i}}
