--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -11,7 +11,7 @@ description: "Rincón de lectura"
 
     <h2 class="year">
       <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}">
-        <span class="book-title">«{{ book.title }}»</span>
+        <span class="book-title">{{ book.title }}</span>
       </a><br/>
     <span class="book-author">{{ book.author}}</span>
     {% if book.link %}
