Log view updated | podcast icon

--- a/_pages/log.html
+++ b/_pages/log.html
@@ -42,6 +42,9 @@ description: "Recientemente..."
       {% if log.cat == 'write' %}
         <span>📝</span>
       {% endif %}
+      {% if log.cat == 'podcast' %}
+        <span>🎧</span>
+      {% endif %}
       {% if log.cat == 'video' %}
         <span>📺</span>
       {% endif %}
