--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -18,8 +18,10 @@ description: "Rincón de lectura"
 
     {% if book.onpage %}
     {% assign progress = book.onpage | times: 1.0 | divided_by:book.pages | times:100 | round: 0 | append: '%' %}
+    {% assign onpage = book.onpage | append: '/' | append: book.pages %}
+
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
-      <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ progress }}</div>
+      <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ onpage }}</div>
     </div>
     {% endif %}
     {% if book.synopsis %}
