--- a/_pages/chess.html
+++ b/_pages/chess.html
@@ -4,5 +4,5 @@ title: ""
 description: "Rincón de ajedrez"
 ---
 <div class="book-list">
-    <img src="assets/images/pages/chess/games/chess_last.jpg"/>
+    <img src="assets/images/pages/chess/games/chess_last.png"/>
 </div>
