--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -21,7 +21,7 @@ description: "Rincón de lectura"
     {% assign onpage = book.onpage | append: '/' | append: book.pages %}
 
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
-      <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ onpage }}</div>
+      <div class="w3-container w3-round w3-blue" style="width: {{ progress }}">{{ onpage }} · {{book.updated}}</div>
     </div>
     {% endif %}
     {% if book.synopsis %}
