Last chess game (GIF)

--- a/_pages/chess.html
+++ b/_pages/chess.html
@@ -3,6 +3,6 @@ layout: page
 title: ""
 description: "Rincón de ajedrez"
 ---
-<div class="book-list">
-    <img src="assets/images/pages/chess/games/chess_last.png"/>
+<div class="chess">
+    <img src="assets/images/pages/chess/games/board.gif"/>
 </div>
